--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -5,10 +5,8 @@
     font-family: sans-serif;
 }
 body, html{
-    width: 100vw;
-    height: 100vh;
-}
-body{
+    width: 100%;
+    height: 100%;
     background: linear-gradient(90deg, rgba(34,89,175,1) 4%, rgba(0,241,255,1) 100%);
     display: flex;
     justify-content: center;
