--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Login</title>
 </head>
@@ -19,8 +19,8 @@
             <p class="welcome"><span>Seja</span> Bem-vindo ao nosso chat &#128516</p>
             <p class="welcome">Digite seu nome de usuário</p>
         </div>
-        <form action="/name-verified" method="post" id="form" autocomplete="off">
-            <label for="nome" class="name-user">Nome/Usuário</label>
+        <form action="/" method="post" id="form" autocomplete="off">
+            <label for="nome" class="name-user">Nome/Apelido</label>
             <input type="text" name="nome" id="nome" class="input">
             <button type="submit" class="btn">Entrar</button>
         </form>
