--- a/views/login.html
+++ b/views/login.html
@@ -19,6 +19,7 @@
             <p class="welcome">Digite seu nome de usuário&#128516</p>
         </div>
         <form action="/" method="post" id="form" autocomplete="off">
+            <p class="erro">Se cadastre para entrar no chat!</p>
             <label for="nome" class="name-user">Nome/Apelido</label>
             <input type="text" name="nome" id="nome" class="input">
             <button type="submit" class="btn">Entrar</button>
