--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@
 body, html{
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(34,89,175,1) 4%, rgba(0,241,255,1) 100%);
+    background-color: #9cc4e4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +32,11 @@ body, html{
     letter-spacing: 2px;
     font-size: 1.3em;
     color: black;
+}
+.erro{
+    color: red;
+    font-size: 1.4em;
+    margin-bottom: 2px;
 }
 .subtitle{
     padding-bottom: 30px;
@@ -85,6 +90,9 @@ body, html{
 .dark{
     background: rgba(0, 0, 0, 0.904);
 }
+.dark .erro{
+    color: white;
+}
 .dark .container{
     background: rgba(63, 61, 61, 0.493);
 }
@@ -119,9 +127,6 @@ body, html{
     }
     .subtitle{
         padding-left: 30px;
-    }
-    span{
-        display: none;
     }
     #modo-claro{
         cursor: pointer;
