--- a/views/chat.html
+++ b/views/chat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/chat.css">
+    <link rel="stylesheet" href="../public/chat.css">
 </head>
 <body class="body">
     <main id="container">
@@ -15,7 +15,6 @@
             <i class="material-icons" id="modo-escuro">brightness_2</i>
         </div>
         <div id="chat">
-            
         </div>
         <div class="form">
             <textarea name="message" id="message" placeholder="Digite sua mensagem"></textarea>
@@ -23,37 +22,6 @@
         </div>
     </main>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const darkMode = document.getElementById("modo-escuro")
-        const lightMode = document.getElementById("modo-claro")
-        const button = document.getElementById("btn")
-        const chat = document.getElementById("chat")
-        const message = document.getElementById('message')
-        function showMessages(message, name){
-            var item = document.createElement("p")
-            item.textContent = `${name}: ${message}`
-            chat.appendChild(item)
-        }
-        const client = io.connect()
-        button.addEventListener("click", function(){
-            client.emit("chat message", message.value)
-            message.value = ""
-        })
-        message.addEventListener("keypress", function(event){
-            if(event.key == "Enter"){
-                client.emit("chat message", message.value)
-                message.value = ""
-            }
-        })
-        client.on("chat message", function(msg, nome){
-            showMessages(msg, nome)
-        })
-        
-        function changeMode(){
-            document.body.classList.toggle("dark")
-        }
-        darkMode.addEventListener("click", changeMode)
-        lightMode.addEventListener("click", changeMode)
-    </script>
+    <script type="text/javascript" src="../public/script.js"></script>
 </body>
 </html>
